styles/style.scss
@import "./variables";
@import "./splashscreen";
@import "./background";
@import "./navbar";
@import "./footer";
@import "./resume";
@import "./projects";
@import "./project-memory-game";
@import "./project-minesweeper-game";
@import "./project-particles-canvas";
@import "./_project-coinflip";
@import "./project-sudoku-game";

// MIX IN DEFINITIONS
@mixin flexCenter{
    display: flex;
    justify-content: center;
    align-items: center;
}

@mixin colorFunction($back, $text){
    background-color: $back;
    color: $text;
}

// Example of using mix-ins
h5{
    @include flexCenter();
    @include colorFunction(black, white);
}

// Example of using inheritance
h6{
    @extend h5;
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
    background-color: transparent;
    line-height: 1.6;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1, h2, h3, h4, h5{
    line-height: 1.2;
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: $colorText;
}

h1{
    color: $colorPrimary;
    font-size: $fontXLarge;
    padding: 1rem;
    text-shadow: 1.5px 1.5px $colorSecond;  
}

h3, h2{         
    padding: 1rem;  
    text-shadow: 2px 2px $colorBackground;   
}

h2{
    color: $colorPrimary;
    font-size: $fontLarge;
}

h3{
    font-size: $fontMed;
}

@keyframes fade-in {
    from {
        opacity: 0;
        transform: scale(0.7,0.7)
    }
    to {
        opacity: 1;
    }
}

.fade-transition {
    transition: all 0.2s ease-in-out;
    opacity: 0;
}

.faded {
    animation: fade-in 0.3s;
    opacity: 1;
}

a{
    color: $colorText;
    text-decoration: none;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    &:hover{
        background-color: $colorBackground;
        color:$colorPrimary;
    }
}


body {
    min-height: 100vh;
    background-color: $colorBackground;
    color: $colorText;
}

img{
    width: 25vh;
    border: 1px solid $colorText;

    &:hover{
        transform:scale(1.01, 1.01);
        transition: all 0.2s ease-in-out;
    }

    @media screen and (max-width: $screenSmall){
        border-width: .1rem;
    }
    
}

main{
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    padding: 4rem 2rem;
    max-width: 1200px;
    margin: auto;

    min-height: calc(100vh - 4rem);

    .intro{
        text-align: center;

        img{
            width: 32vh;
            border-radius: 100%;
            border-width: 5px;
            border-color:$colorPrimary;
        }

        h1{
            font-size: $fontXXLarge;
        }
    }

    p{
        padding:1rem;
        font-size: $fontSmall;
        width: 100%;

        &.intro{
            @media screen and (max-width: $screenSmall){
                display: none;
            }
        }
    }
}

.hidden{
    display: none;
}

